[gd_scene load_steps=16 format=2]

[ext_resource path="res://Textures/Entities/Magneptans/Eye.png" type="Texture" id=1]
[ext_resource path="res://Textures/Entities/Magneptans/Body.png" type="Texture" id=2]
[ext_resource path="res://Textures/Entities/Magneptans/Pupil.png" type="Texture" id=3]
[ext_resource path="res://Textures/Entities/Magneptans/UpperLegR.png" type="Texture" id=4]
[ext_resource path="res://Textures/Entities/Magneptans/UpperLegL.png" type="Texture" id=5]
[ext_resource path="res://Textures/Entities/Magneptans/LowerLegL.png" type="Texture" id=6]
[ext_resource path="res://Textures/Entities/Magneptans/LowerLegR.png" type="Texture" id=7]
[ext_resource path="res://Prefabs/Entities/Magneptans/Magneptans.gd" type="Script" id=8]
[ext_resource path="res://Prefabs/Entities/Magneptans/SpiderUpperLeg.gd" type="Script" id=9]
[ext_resource path="res://Components/Managers/HealthManager/HealthManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Components/Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape2D" id=6]
radius = 14.0

[sub_resource type="Animation" id=8]
resource_name = "Death"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 0.3, 5, 0.3, 5, 0.3, 0.25, 0.25 ),
"update": 0,
"values": [ 15.0, 0.0, -20.0, 0.0, 25.0, 0.0, -50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/Eye:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.913725, 0.345098, 0.0705882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.301961, 0.65098, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.560784, 0.870588, 0.364706, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/Eye:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/Eye:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.913725, 0.345098, 0.0705882, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ 10.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/Eye:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/Eye:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Body/UpperLegL:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 55.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Body/UpperLegL2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/Body/UpperLegL3:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/Body/UpperLegR:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -40.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Visuals/Body/UpperLegR2:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Visuals/Body/UpperLegR3:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Visuals/Body/UpperLegL/LowerLegL:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Visuals/Body/UpperLegL2/LowerLegL2:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Visuals/Body/UpperLegL3/LowerLegL2:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Visuals/Body/UpperLegR/LowerLegR:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Visuals/Body/UpperLegR2/LowerLegR2:rotation_degrees")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Visuals/Body/UpperLegR3/LowerLegR2:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Visuals:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Magneptans" type="Node2D"]
script = ExtResource( 8 )

[node name="HealthManager" parent="." instance=ExtResource( 10 )]
max_health = 45

[node name="Visuals" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Visuals"]
texture = ExtResource( 2 )

[node name="Eye" type="Sprite" parent="Visuals/Body"]
position = Vector2( 0, -34 )
texture = ExtResource( 1 )

[node name="Pupil" type="Sprite" parent="Visuals/Body/Eye"]
texture = ExtResource( 3 )
offset = Vector2( 8, 0 )

[node name="UpperLegL" type="Sprite" parent="Visuals/Body"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
position = Vector2( -9.99999, -5.00001 )
rotation = 0.959931
texture = ExtResource( 5 )
offset = Vector2( -16, 0 )
script = ExtResource( 9 )

[node name="LowerLegL" type="Sprite" parent="Visuals/Body/UpperLegL"]
position = Vector2( -30, 6 )
rotation = -0.174533
texture = ExtResource( 6 )
offset = Vector2( 0, 24 )

[node name="UpperLegL2" type="Sprite" parent="Visuals/Body"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
position = Vector2( -10, 20 )
rotation = -0.174533
texture = ExtResource( 5 )
offset = Vector2( -16, 0 )
script = ExtResource( 9 )

[node name="LowerLegL2" type="Sprite" parent="Visuals/Body/UpperLegL2"]
position = Vector2( -30, 6 )
rotation = 0.349066
texture = ExtResource( 6 )
offset = Vector2( 0, 24 )

[node name="UpperLegL3" type="Sprite" parent="Visuals/Body"]
position = Vector2( -14, 3 )
rotation = -0.174533
texture = ExtResource( 5 )
offset = Vector2( -16, 0 )
script = ExtResource( 9 )

[node name="LowerLegL2" type="Sprite" parent="Visuals/Body/UpperLegL3"]
position = Vector2( -30, 6 )
rotation = 0.349066
texture = ExtResource( 6 )
offset = Vector2( 0, 24 )

[node name="UpperLegR" type="Sprite" parent="Visuals/Body"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
position = Vector2( 10, -5 )
rotation = -0.698132
texture = ExtResource( 4 )
offset = Vector2( 16, 0 )
script = ExtResource( 9 )

[node name="LowerLegR" type="Sprite" parent="Visuals/Body/UpperLegR"]
position = Vector2( 30, 6 )
texture = ExtResource( 7 )
offset = Vector2( 0, 24 )

[node name="UpperLegR2" type="Sprite" parent="Visuals/Body"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
position = Vector2( 10, 20 )
rotation = 0.174533
texture = ExtResource( 4 )
offset = Vector2( 16, 0 )
script = ExtResource( 9 )

[node name="LowerLegR2" type="Sprite" parent="Visuals/Body/UpperLegR2"]
position = Vector2( 30, 6 )
rotation = -0.349066
texture = ExtResource( 7 )
offset = Vector2( 0, 24 )

[node name="UpperLegR3" type="Sprite" parent="Visuals/Body"]
position = Vector2( 15, 4 )
rotation = 0.174533
texture = ExtResource( 4 )
offset = Vector2( 16, 0 )
script = ExtResource( 9 )

[node name="LowerLegR2" type="Sprite" parent="Visuals/Body/UpperLegR3"]
position = Vector2( 30, 6 )
rotation = -0.349066
texture = ExtResource( 7 )
offset = Vector2( 0, 24 )

[node name="Hitbox" parent="Visuals/Body" instance=ExtResource( 11 )]
position = Vector2( 0, 1 )
health_manager = NodePath("../../../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visuals/Body/Hitbox"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 8 )
anims/Hit = SubResource( 3 )
anims/RESET = SubResource( 2 )

[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
[connection signal="on_hit" from="Visuals/Body/Hitbox" to="." method="_on_Hitbox_on_hit"]
